clusters/apps/base/flux-system/webhook-receiver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: ${DYNAMIC_DOMAIN}
    external-dns/is-public: "true"
    nginx.ingress.kubernetes.io/limit-rpm: "1"
  name: webhook-receiver
  namespace: flux-system
spec:
  ingressClassName: external
  rules:
  - host: receiver.${SECRET_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: webhook-receiver
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - receiver.${SECRET_DOMAIN}
